fix: body height overflow

--- a/src/template/src/styles/main.css
+++ b/src/template/src/styles/main.css
@@ -26,14 +26,14 @@ a:visited {
 html {
   margin: 0;
   padding: 0;
+  background: var(--background);
+  min-height: 100vh;
 }
 
 body {
-  background: var(--background);
   max-width: var(--max-width);
-  margin: 0 auto;
+  margin: 0 auto 0 auto;
   padding: 0;
-  min-height: 100vh;
 }
 
 h1 {
